# pixlvault

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  FRONTEND_TODO.txt  MANIFEST.in  README.md  TODO.txt  docker-compose.yml  docker-entrypoint.sh  docker-publish.yml  features.md  likeness_parameters_notes.txt  output.txt  package-lock.json  pyproject.toml  requirements.txt  review.txt  setup.py  tasksystem.md
.github/: copilot-instructions.md
comfyui-workflows/: Flux2-Klein-Image-Edit.json
docs/: WorkerDiagram.dia  index.html  picture_processing_dependency_graph.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
metrics/: history.json
migrations/: env.py
pixelurgy_vault/: TODO.txt  app.py  character.py  characters.py  cli.py  database.py  image_loading_dataset_prepper.py  logging.py  picture.py  picture_iteration.py  picture_iterations.py  picture_quality.py  picture_tagger.py  picture_utils.py  pictures.py  schema_version.py  server.py  tag_natural_map.py  tag_naturaliser.py  vault.py  vault_upgrade.py
pixlstash/: __init__.py  app.py  auth.py  database.py  event_types.py  image_loading_dataset_prepper.py  picture_scoring.py  picture_tagger.py  pixl_logging.py  server.py  stacking.py  startup_checks.py  vault.py  work_planner.py
pixlvault/: TODO.txt  __init__.py  app.py  auth.py  character.py  characters.py  database.py  event_types.py  face_character_likeness_worker.py  face_extraction_worker.py  face_likeness_worker.py  facial_features_worker.py  feature_extraction_worker.py  logging.py  (+39 more)
(+277 files in other folders)
