[project]
name = "pixelurgy-vault"
version = "0.2.0"
description = "Pixelurgy Vault REST API server"
authors = [
    { name = "Pixelurgy" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "platformdirs",
    "pillow",
    "numpy",
    "scipy",
    "opencv-python",
    "colorlog",
    "tomli",
    "httpx",
    "python-multipart"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "ruff"
]

[project.scripts]
install-pixelurgy-service = "pixelurgy_vault.scripts.install_systemd_service:main"
pixelurgy-server = "pixelurgy_vault.server:main"

[build-system]
requires = ["setuptools>=42", "wheel", "twine"]
build-backend = "setuptools.build_meta"
